# basic-otlp

./: .gitignore  Cargo.toml  README.md  build-a-pki.sh  docker-compose.yaml  openssl.cnf  otel-collector-config.yaml
src/: aggregator.rs  main.rs  resource.rs  temporality.rs
