[package]
name = "basic-otlp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
env_logger = "0.9.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
once_cell = "1.17"
opentelemetry_api = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", package = "opentelemetry_api", branch = "main", features = ["metrics"] }
opentelemetry_sdk = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", package = "opentelemetry_sdk", branch = "main", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", package = "opentelemetry-otlp", branch = "main", features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", package = "opentelemetry-semantic-conventions", branch = "main" }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tonic = {version = "0.9.0", features = ["tls"]}
url = "2.2.0"
