[package]
name = "basic-otlp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
env_logger = "0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
once_cell = "1.18"
# opentelemetry_api = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", package = "opentelemetry_api", branch = "main", features = ["metrics"] }
# opentelemetry_sdk = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", package = "opentelemetry_sdk", branch = "main", features = ["rt-tokio", "metrics"] }
# opentelemetry-otlp = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", package = "opentelemetry-otlp", branch = "main", features = ["tonic", "tls", "tls-roots", "metrics"] }
# opentelemetry-semantic-conventions = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", package = "opentelemetry-semantic-conventions", branch = "main" }
opentelemetry_api = { version = "*", features = ["metrics"] }
opentelemetry_sdk = { version = "*", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "*", features = ["tonic", "tls", "tls-roots", "metrics"] }
opentelemetry-semantic-conventions = { version = "*" }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = {version = "0.9", features = ["tls"]}
url = "2"
